# mud-balance-ui

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  encoding.py  jobqueue.py  meta.py  routes.py  runner.py  storage.py  world.py
docs/: DEMO.md
static/: htmx.min.js  viewer.css  viewer.js
templates/: base.html  run_pending.html  run_view.html  runs_list.html  runs_new.html
templates/partials/: log_panel.html  screen_panel.html  state_panel.html
tests/: test_encoding.py  test_storage.py
